--- a/todo.org
+++ b/todo.org
@@ -5,11 +5,11 @@
  1.1. Створення
  1.2. Видалення
  1.3. Редагування
-** TODO Користувач:
+** DONE Користувач:
  1.1.    Редагування власного профілю
 
 * TODO Опис системи:
 ** DONE Кожен користувач може відправити повідомлення будь­якому іншому користувачу системи за винятком себе (які в даний момент не є заблокованими).
 ** TODO Після логування користувач повинен бачити повідомлення з текстом про кількість нових повідомлень. Якщо їх к­ть > 0, тоді це повідомлення повинно бути клікабельним і вести на список нових повідомлень, де користувач може відповісти на них.
 ** TODO Кожні 10 хвилин сеансу список повідомлень повинен автоматично онувляватися, а також повинна існувати кнопка при кліку по якій виконуються аналогічні дії.
-** TODO Користувач повинен мати можливість бачити історію переписки з будь­яким іншим користувачем системи.
+** DONE Користувач повинен мати можливість бачити історію переписки з будь­яким іншим користувачем системи.
